--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -7,6 +7,9 @@
 }
 
 .content {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
   margin-top: 1080px;
   flex-grow: 1;
   color: #3d4448;
@@ -15,7 +18,7 @@
 .img-background {
   position: absolute;
   width: 100%;
-  height: 1080px; 
+  height: 1080px;
   background-image: url('../images/1.png');
   background-size: cover;
   background-repeat: no-repeat;
@@ -29,8 +32,8 @@
   .content {
     margin-top: 400px;
   }
-  
+
   .img-background {
-    height: 400px; 
+    height: 400px;
   }
 }
