--- a/src/styles/NavigationBar.css
+++ b/src/styles/NavigationBar.css
@@ -3,26 +3,33 @@
 .navbar {
   position: relative;
   display: flex;
-  flex-direction: column; 
-  align-items: center; 
+  flex-direction: column;
+  align-items: center;
   z-index: 10;
   height: 200px;
 }
 
 .navbar-content {
   display: flex;
-  flex-direction: row; 
+  flex-direction: row;
   justify-content: center;
   align-items: center;
   width: 100%;
-  padding: 20px 20px 20px; 
+  padding: 20px 20px 20px;
   box-sizing: border-box;
+}
+
+.navbar-logo{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 
 .navbar-logo img {
   max-height: 100px;
   width: auto;
-  margin: 20px; 
+  margin: 20px;
   transition: 1000ms;
 }
 
@@ -31,7 +38,7 @@
   padding: 0;
   display: flex;
   align-items: center;
-  margin-top: 20px; 
+  margin-top: 20px;
 }
 
 .navbar-item {
@@ -62,17 +69,15 @@
 
 
   .navbar-content {
-    
     flex-direction: column;
   }
 
   .navbar-logo img {
-    margin-left: 100px;
-    margin-bottom: 10px; 
+    margin-bottom: 10px;
   }
 
   .navbar-list {
-    margin-top: 10px; 
+    margin-top: 10px;
   }
 
   .navbar-item {
